# MPI-Softmax-Benchmark

./: .gitignore  README.md
data/: benchmark1.txt  benchmark2.txt
scripts/: sampler.py
scripts/scripts/: interpolate.py  interpolate_sampler.py  sampler.py  visualize.ipynb
src/: main.c  utils.c
src/include/: macros.h  utils.h
src/src/: CMakeLists.txt  main.c
